--- a/output/team.html
+++ b/output/team.html
@@ -25,14 +25,14 @@
                 <div class="team-area col-12 d-flex justify-content-center">
 <div class="card employee-card">
         <div class="card-header">
-            <h2 class="card-title">Erik Alfvin</h2>
+            <h2 class="card-title">f</h2>
             <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
         </div>
         <div class="card-body">
             <ul class="list-group">
-                <li class="list-group-item">ID: 234</li>
-                <li class="list-group-item">Email: <a href="mailto:erik@gmail">erik@gmail</a></li>
-                <li class="list-group-item">Office number: 5e45</li>
+                <li class="list-group-item">ID: f</li>
+                <li class="list-group-item">Email: <a href="mailto:f">f</a></li>
+                <li class="list-group-item">Office number: f</li>
             </ul>
         </div>
         </div>
