--- a/output/team.html
+++ b/output/team.html
@@ -25,14 +25,49 @@
                 <div class="team-area col-12 d-flex justify-content-center">
 <div class="card employee-card">
         <div class="card-header">
-            <h2 class="card-title">f</h2>
+            <h2 class="card-title">erik</h2>
             <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
         </div>
         <div class="card-body">
             <ul class="list-group">
-                <li class="list-group-item">ID: f</li>
-                <li class="list-group-item">Email: <a href="mailto:f">f</a></li>
-                <li class="list-group-item">Office number: f</li>
+                <li class="list-group-item">ID: erik@erik.com</li>
+                <li class="list-group-item">Email: <a href="mailto:erik@erik.com">erik@erik.com</a></li>
+                <li class="list-group-item">Office number: 1</li>
             </ul>
         </div>
         </div>
+
+<div class="card employee-card">
+        <div class="card-header">
+            <h2 class="card-title">undefined</h2>
+            <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+        </div>
+        <div class="card-body">
+            <ul class="list-group">
+                <li class="list-group-item">ID: 22</li>
+                <li class="list-group-item">Email: <a href="mailto:mike@mike">mike@mike</a></li>
+                <li class="list-group-item">School: undefined</li>
+            </ul>
+        </div>
+        </div>
+
+<div class="card employee-card">
+        <div class="card-header">
+            <h2 class="card-title">undefined</h2>
+            <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+        </div>
+        <div class="card-body">
+            <ul class="list-group">
+                <li class="list-group-item">ID: 5</li>
+                <li class="list-group-item">Email: <a href="mailto:Joe.com">Joe.com</a></li>
+                <li class="list-group-item">GitHub: <a href="https://github.com/joe-dev" target="_blank" rel="noopener noreferrer">joe-dev</a></li>
+            </ul>
+        </div>
+        </div>
+
+                </div>
+            </div>
+        </div>
+    </body>
+
+    </html>
