Fixed remaining tests

--- a/output/team.html
+++ b/output/team.html
@@ -25,13 +25,13 @@
                 <div class="team-area col-12 d-flex justify-content-center">
 <div class="card employee-card">
         <div class="card-header">
-            <h2 class="card-title">erik</h2>
+            <h2 class="card-title">Erik Alfvin</h2>
             <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
         </div>
         <div class="card-body">
             <ul class="list-group">
-                <li class="list-group-item">ID: 11</li>
-                <li class="list-group-item">Email: <a href="mailto:erik@eeik">erik@eeik</a></li>
+                <li class="list-group-item">ID: 12</li>
+                <li class="list-group-item">Email: <a href="mailto:erik@erik.com">erik@erik.com</a></li>
                 <li class="list-group-item">Office number: 1</li>
             </ul>
         </div>
@@ -39,56 +39,42 @@
 
 <div class="card employee-card">
         <div class="card-header">
-            <h2 class="card-title">jo</h2>
+            <h2 class="card-title">Joe</h2>
             <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
         </div>
         <div class="card-body">
             <ul class="list-group">
-                <li class="list-group-item">ID: 12</li>
-                <li class="list-group-item">Email: <a href="mailto:jo@jo">jo@jo</a></li>
-                <li class="list-group-item">GitHub: <a href="https://github.com/jo-dev" target="_blank" rel="noopener noreferrer">jo-dev</a></li>
+                <li class="list-group-item">ID: 121</li>
+                <li class="list-group-item">Email: <a href="mailto:joe@erik.com">joe@erik.com</a></li>
+                <li class="list-group-item">GitHub: <a href="https://github.com/joe-dev" target="_blank" rel="noopener noreferrer">joe-dev</a></li>
             </ul>
         </div>
         </div>
 
 <div class="card employee-card">
         <div class="card-header">
-            <h2 class="card-title">jow</h2>
-            <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-        </div>
-        <div class="card-body">
-            <ul class="list-group">
-                <li class="list-group-item">ID: 13</li>
-                <li class="list-group-item">Email: <a href="mailto:jow@erik.com">jow@erik.com</a></li>
-                <li class="list-group-item">GitHub: <a href="https://github.com/jow-dev" target="_blank" rel="noopener noreferrer">jow-dev</a></li>
-            </ul>
-        </div>
-        </div>
-
-<div class="card employee-card">
-        <div class="card-header">
-            <h2 class="card-title">imaintern</h2>
+            <h2 class="card-title">internname</h2>
             <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
         </div>
         <div class="card-body">
             <ul class="list-group">
-                <li class="list-group-item">ID: 15</li>
-                <li class="list-group-item">Email: <a href="mailto:ima@erik.com">ima@erik.com</a></li>
-                <li class="list-group-item">School: undefined</li>
+                <li class="list-group-item">ID: 232</li>
+                <li class="list-group-item">Email: <a href="mailto:intern@inters">intern@inters</a></li>
+                <li class="list-group-item">School: ma </li>
             </ul>
         </div>
         </div>
 
 <div class="card employee-card">
         <div class="card-header">
-            <h2 class="card-title">eeng</h2>
-            <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+            <h2 class="card-title">anotherintern</h2>
+            <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
         </div>
         <div class="card-body">
             <ul class="list-group">
-                <li class="list-group-item">ID: 55</li>
-                <li class="list-group-item">Email: <a href="mailto:eeng@erik">eeng@erik</a></li>
-                <li class="list-group-item">GitHub: <a href="https://github.com/sdlkfjls-dev" target="_blank" rel="noopener noreferrer">sdlkfjls-dev</a></li>
+                <li class="list-group-item">ID: 344343</li>
+                <li class="list-group-item">Email: <a href="mailto:bla">bla</a></li>
+                <li class="list-group-item">School: MIT</li>
             </ul>
         </div>
         </div>
